--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,4 +1,33 @@
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
+html, body {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+    overflow-x: hidden; 
+}
+
+body.dark {
+    background-color: #333; 
+    color: #ddd; 
+}
+
+.dark .bg-customYellow {
+    background-color: #444; 
+}
+
+
+.navbar {
+    position: relative;
+    z-index: 1000; 
+  }
+  
+  .form-container {
+    position: relative; 
+    z-index: 1; 
+  }
+  
